# conversational-ai-modules-monorepo

./: .dockerignore  .gitignore  Dockerfile  README.md  aegion.db  aegion.db.REMOVED.git-id  jupyter_notebook.ipynb  llm-requirements.txt  openapi3_1.yaml  product_descriptions.csv  pyproject.toml  requirements.txt  sample.env  setup.py  test.py  test_cases.csv  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
chatbot/: chat_reference.py  conversation.py  parameters.py
chroma_data/: chroma.sqlite3
discord_bot/: aegion.db  bot.py  csv_to_sqlite.py  inventoryquery.py  memory.py  parameters.py  product_descriptions.csv  server.py  state.py  testbot.py
examples/: medical_tot.py  v12.py  v6.py
examples/nlqs_demo/: nlqs_single_query_demo.py
examples/tog_examples/: entity_extractor_usage.py  entity_mapper_usage.py  only_entity_exploration.py
expert_system/: chat_reference.py  conversation.py  conversation2.py  parameters.py  prompts.py
expert_system/tests/: test_conversation.py
expert_system/tests/e2e/: test_converse_api.py
llms/: azure_openai_llm.py  groq_llm.py
logs/: neo4j_knowledge_graph.log.2025-04-08
med_tot/: intent_classifier.py  main.py  sample_data_manager.py  state_evaluator.py  thought_generator.py  tree_of_thoughts.py  tree_of_thoughts_executor.py
migrations/: migrate-mongo-config.js  package-lock.json  package.json
migrations/migrations/: 20230904131359-init.js  20230905162926-chat_references_update.js
nlqs/: NLQS-column-ops.drawio  README.md  column_introspection.py  description_generator.py  llm_driver.py  neondb_driver.py  nlqs.py  parameters.py  query.py  query_construction.py  search_field.py  summarization.py  vectordb_driver.py  workflow.py
nlqs/database/: abstract_driver.py  driver.py  postgres.py  sqlite.py
nlqs/prompt_engineering/: introduction_to_dspy.ipynb  query_dspy.ipynb
nlqs/tests/: conftest.py  test_bge_embeddings.py  test_description_generator.py  test_nlqs_basic.py  test_query_construction.py  test_vectordb_driver.py
nlqs/tests/data/: column_descriptions_with_embeddings.tsv  table_descriptions_with_embeddings.tsv
nlqs/tests/database/: test_postgres.py  test_sqlite.py
nlqs/tests/e2e/: test_nlqs.py
scripts/: benchmark.py  content_helper.py  csv_to_PostgreSQL.py  csv_to_sqlite.py  description_generator.py  generate_descriptions.py  generate_embeddings.py  generate_vector_collection.py  gradio_bot.py  local_llm.py  mytest.py  parameters.py  regenerate_test_embeddings_bge.py  setup_nlqs_vectordb.py  tbd_column_introspection.py
state_machine/: README.md  main.py  state_machine.py
state_machine/bot/: chat_bot.py  prompts.py  session.py
state_machine/exmaples/: app.py
state_machine2/: app.py
tog/: __init__.py  config.py  tog.py
tog/benchmark/: README.md  __init__.py  benchmark_entity_extraction.py  entity_extractor_benchmark.py  plot_benchmark_results.py  run_benchmark.sh
tog/benchmark/results/: benchmark_report_20250305_140323.csv
tog/kgs/: __init__.py  kg.py  neo4j_kg.py
tog/llms/: __init__.py  azure_openai_llm.py  base_llm.py  groq_llm.py
tog/models/: entity.py  path.py  relation.py  triple.py
tog/pipeline/: ReasoningModule.py  __init__.py  entity_explorer.py  entity_extractor.py  entity_mapper.py  exploration_loop.py  explorer.py  main.py  mapping_handler.py  relation_explorer.py
tog/prompts/: entity_prune.yaml  extraction_prompt.yaml  generation_prompt.yaml  prompt_manager.py  reasoning_prompt.yaml  relation_prune.yaml
tog/scripts/: __init__.py  compare_prompts.py  quick_benchmark.py  run_benchmark.py
tog/src/: entity_extraction.py  entity_extraction_example.py
tog/src/llms/: azure_openai_llm.py  groq_llm.py
tog/src/models/: entity.py  kg.py  llm.py  path.py  relation.py  response.py
tog/src/pipeline/: entity_explorer.py  entity_extractor.py  entity_mapper.py  exploration_loop.py  mapping_handler.py  relation_explorer.py
tog/src/utils/: logger.py  (+1 more)
tog/utils/: __init__.py  json_to_nt.py  kg_manager.py  logger.py  prompt_loader.py  prompt_utils.py  visualizer.py  yaml_handler.py
tot/: embedding_utils.py  framework.py  intent_classifier.py  sample_data_manager.py  solution_parser.py  state_evaluator.py  test.py  thought_generator.py  tree_of_thoughts.py  tree_of_thoughts_executor.py  v12.py  v6.py  v8.py
utils/: json_outputs.py  llm.py  parameters.py
utils/tests/: test_json_outputs.py  test_llm.py
