[tool.poetry]
name = "conversational_ai_library"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
readme = "README.md"

packages = [
    { include = "nlqs"},
    { include = "chatbot" },
    { include = "discord_bot" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
connexion = {extras = ["uvicorn"], version = "^2.14.2"}
python-dateutil = "^2.8.2"
setuptools = "^65.5.0"
swagger-ui-bundle = "^0.0.9"
pypdf="^3.10.0"
pymongo = "^4.3.3"
flask-cors = "^3.0.10"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
flask-jwt-extended = "^4.5.2"
gunicorn = "^21.2.0"
chromadb = "^0.4.8"
sendgrid = "^6.10.0"
stripe = "^6.4.0"
discord-py = "^2.3.2"
langchain-community = "^0.2.1"
langchain-core = "^0.2.1"
langchain-openai = "^0.1.7"
pandas = "^2.2.2"

langchain = "^0.2.5"
[tool.poetry.group.dev.dependencies]
flask_testing="0.8.0"
coverage="^4.0.3"
nose="^1.3.7"
py="^1.4.31"
randomize="^0.13"
tox="3.20.1"
pluggy = "^1.2.0"
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
pandas-stubs = "^2.2.2.240603"
pytest = "^8.2.2"
gradio = "^4.37.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.scripts]
start-discord-bot = "discord_bot.server:run_server"
