[tool.poetry]
name = "conversational_ai_library"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
readme = "README.md"

packages = [
    { include = "nlqs"},
    { include = "expert_system" },
    { include = "discord_bot" },
    { include = "tot"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dateutil = "^2.8.2"
setuptools = "^65.5.0"
pypdf="^3.10.0"
pymongo = "^4.3.3"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
chromadb = "^0.4.8"
langchain-community = "^0.2.1"
langchain-core = "^0.2.1"
langchain-openai = "^0.1.7"
pandas = "^2.2.2"
langchain = "^0.2.5"
psycopg2-binary = "^2.9.9"
langchain-chroma = "^0.1.3"
sqlalchemy = "^2.0.35"

[tool.poetry.group.dev.dependencies]
flask_testing="0.8.0"
coverage="^4.0.3"
nose="^1.3.7"
py="^1.4.31"
randomize="^0.13"
tox="3.20.1"
pluggy = "^1.2.0"
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
pandas-stubs = "^2.2.2.240603"
pytest = "^8.2.2"
gradio = "^4.37.2"
pytest-dotenv = "^0.5.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.scripts]
start-discord-bot = "discord_bot.server:run_server"
